# chip8_emulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: CMakeLists.txt  app.c  app.h  main.c
src/core/: cpu.c  cpu.h  defs.h  instruction.c  instruction.h  ram.c  ram.h  rom.c  rom.h
src/graphics/: display.c  display.h
src/machine/: CMakeLists.txt  emulator.c  emulator.h
src/machine/core/: cpu.c  cpu.h  instruction.c  ram.c  rom.c  rom.h
src/machine/graphics/: display.c  display.h
src/machine/input/: keypad.c  keypad.h
src/window/: CMakeLists.txt  window.c  window.h
